@@ -44,6 +44,7 @@ public class CBCRootNetwork {
 		addMsg(id++, ClientboundFluidCastingTimePacket.class, ClientboundFluidCastingTimePacket::copyOf);
 		addMsg(id++, ServerboundUseWelderPacket.class, ServerboundUseWelderPacket::new);
 		addMsg(id++, ClientboundBigCannonPropellantPropertiesPacket.class, ClientboundBigCannonPropellantPropertiesPacket::copyOf);
+		addMsg(id++, ClientboundFluidBlobStackSyncPacket.class, ClientboundFluidBlobStackSyncPacket::new);
 	}
 
 	private static <T extends RootPacket> void addMsg(int id, Class<T> clazz, Function<FriendlyByteBuf, T> decoder) {
@@ -52,13 +53,13 @@ public class CBCRootNetwork {
 	}
 
 	public static RootPacket constructPacket(FriendlyByteBuf buf, int id) {
-		if (!ID_TO_CONSTRUCTOR.containsKey(id)) throw new IllegalStateException("Attempted to deserialize packet with illegal id: " + id);
+		if (!ID_TO_CONSTRUCTOR.containsKey(id)) throw new IllegalStateException("Attempted to deserialize packet with illegal entityId: " + id);
 		return ID_TO_CONSTRUCTOR.get(id).apply(buf);
 	}
 
 	public static void writeToBuf(RootPacket pkt, FriendlyByteBuf buf) {
 		int id = TYPE_TO_ID.getOrDefault(pkt.getClass(), -1);
-		if (id == -1) throw new IllegalStateException("Attempted to serialize packet with illegal id: " + id);
+		if (id == -1) throw new IllegalStateException("Attempted to serialize packet with illegal entityId: " + id);
 		buf.writeVarInt(id);
 		pkt.rootEncode(buf);
 	}
